Sidebar Collapse - using padding to fix #7963 instead
Fixes #8020

--- a/src/resources/formats/html/bootstrap/_bootstrap-rules.scss
+++ b/src/resources/formats/html/bootstrap/_bootstrap-rules.scss
@@ -1719,6 +1719,12 @@ div.callout.callout-style-default > .callout-header {
   padding-bottom: 10px;
 }
 
+.sidebar-menu-container {
+  @include media-breakpoint-down(md) {
+    padding-bottom: 5em;
+  }
+}
+
 .quarto-sidebar-toggle:not(.expanded) .quarto-sidebar-toggle-contents {
   padding-top: 0px !important;
   padding-bottom: 0px;
